// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconList component renders correctly with default icon 1`] = `
<div>
  <div>
    <div
      class="ListItem"
    >
      <div
        class="ListItem__icon"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
          />
        </svg>
      </div>
      <div
        class="ListItem__content"
      >
        <h6
          class="MuiTypography-root ListItem__title Typography MuiTypography-h6"
        >
          Title
        </h6>
        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum qui quas rem. Animi doloremque veniam numquam at deleniti quas fuga, similique minus magni cum nihil, in sed neque, tempore adipisci.
      </div>
    </div>
  </div>
</div>
`;

exports[`IconList component renders correctly with multiple children 1`] = `
<div>
  <div>
    <div
      class="ListItem"
    >
      <div
        class="ListItem__icon"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
          />
        </svg>
      </div>
      <div
        class="ListItem__content"
      >
        <h6
          class="MuiTypography-root ListItem__title Typography MuiTypography-h6"
        >
          BMI Group sells to dealers, as well as professional customers.
        </h6>
        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est esse itaque consequatur laboriosam nisi perspiciatis, excepturi eaque delectus rerum maxime vitae minus error ipsam suscipit totam ab voluptates accusamus quia.
      </div>
    </div>
  </div>
  <div>
    <div
      class="ListItem"
    >
      <div
        class="ListItem__icon"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
          />
        </svg>
      </div>
      <div
        class="ListItem__content"
      >
        <h6
          class="MuiTypography-root ListItem__title Typography MuiTypography-h6"
        >
          BMI Group sells to dealers, as well as professional customers.
        </h6>
        Lorem, ipsum dolor sit amet consectetur adipisicing elit.
      </div>
    </div>
  </div>
  <div>
    <div
      class="ListItem"
    >
      <div
        class="ListItem__icon"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
          />
        </svg>
      </div>
      <div
        class="ListItem__content"
      >
        <h6
          class="MuiTypography-root ListItem__title Typography MuiTypography-h6"
        >
          BMI Group sells to dealers, as well as professional customers.
        </h6>
        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est esse itaque consequatur laboriosam nisi perspiciatis, excepturi eaque delectus rerum maxime vitae minus error ipsam suscipit totam ab voluptates accusamus quia.
      </div>
    </div>
  </div>
  <div>
    <div
      class="ListItem"
    >
      <div
        class="ListItem__icon"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
          />
        </svg>
      </div>
      <div
        class="ListItem__content"
      >
        <h6
          class="MuiTypography-root ListItem__title Typography MuiTypography-h6"
        >
          BMI Group sells to dealers, as well as professional customers.
        </h6>
        Lorem, ipsum dolor sit amet consectetur adipisicing elit.
      </div>
    </div>
  </div>
</div>
`;
